# C-Languge-coding

./: CMakeLists.txt
dataStructueAndAlgorithm/: stackFrame.c
variable and memory distribute/: CMakeLists.txt  IndirectAssignment.c  Input_outputCharacteristics.c  dataType.c  data_type.c  fomLevelOneToLevelTwo.c  global_variable.c  help_data.c  sizeof_use.c  stack_space.c  stringOperations.c  void_data.c
