cmake_minimum_required(VERSION 3.28)
project(C_Languge_coding C)

set(CMAKE_C_STANDARD 11)

add_executable(data_type "variable and memory distribute/data_type.c")
add_executable(help_data "variable and memory distribute/help_data.c")
add_executable(sizeof_use "variable and memory distribute/sizeof_use.c")
add_executable(stack_space "variable and memory distribute/stack_space.c")
add_executable(void_data "variable and memory distribute/void_data.c")
add_executable(global_variable "variable and memory distribute/global_variable.c")
add_executable(indirectAssignment "variable and memory distribute/IndirectAssignment.c")
add_executable(fomrLevelOneToLevelTwo "variable and memory distribute/fomLevelOneToLevelTwo.c")
add_executable(Input_outputCharacteristics "variable and memory distribute/Input_outputCharacteristics.c")
add_executable(stringOperations  "variable and memory distribute/stringOperations.c")