cmake_minimum_required(VERSION 3.28)
project(C_Languge_coding C)

set(CMAKE_C_STANDARD 11)

add_executable(data_type "data_type.c")
add_executable(help_data "help_data.c")
add_executable(sizeof_use "sizeof_use.c")
add_executable(stack_space "stack_space.c")
add_executable(void_data "void_data.c")
add_executable(global_variable "global_variable.c")
add_executable(indirectAssignment "IndirectAssignment.c")
add_executable(fomrLevelOneToLevelTwo "fomLevelOneToLevelTwo.c")
add_executable(Input_outputCharacteristics "Input_outputCharacteristics.c")
add_executable(stringOperations  "stringOperations.c")